# workbuddy-migrator

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-03-workbuddy-account-migrator.md
docs/superpowers/specs/: 2026-07-03-workbuddy-account-migrator-design.md
tests/: conftest.py  test_backup.py  test_cli.py  test_doctor.py  test_inventory.py  test_migrate.py  test_planner.py  test_rollback.py  test_verify.py
workbuddy_migrator/: __init__.py  backup.py  cli.py  doctor.py  identity.py  inventory.py  migrate.py  models.py  paths.py  planner.py  redact.py  report.py  rollback.py  schema.py  verify.py
