[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workbuddy-migrator"
version = "0.1.0"
description = "Dry-run-first local WorkBuddy account migration tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "workbuddy-migrator contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
wbm = "workbuddy_migrator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
